--- a/src/components/NavbarComponent/NavbarComponent.scss
+++ b/src/components/NavbarComponent/NavbarComponent.scss
@@ -8,23 +8,25 @@
   padding: 1vh 2vw;
   box-shadow: 0 8px 6px -6px #999;
 
+  background: $color-primary;
+
   img {
     height: 60px;
     padding: 4px;
     border-radius: 50%;
     background: $color-primary-shade;
   }
+}
 
-  button {
-    @include classic-button;
+.sign-button {
+  @include classic-button;
 
-    background: $color-accent;
+  background: $color-accent;
 
-    transition: .4s;
+  transition: .4s;
 
-    &:hover, &:focus {
-      background: $color-accent-shade;
-      color: white;
-    }
+  &:hover, &:focus {
+    background: $color-accent-shade;
+    color: white;
   }
 }
