changed the dashboard to a year selector

--- a/src/webpages/LandingPage/LandingPage.scss
+++ b/src/webpages/LandingPage/LandingPage.scss
@@ -24,7 +24,7 @@
   h1 {
     font-family: 'Oswald', cursive;
     font-size: 3rem;
-    color: $color-primary-shade
+    color: $color-primary-shade;
   }
 
   p {
