--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Zen+Dots&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Prompt:wght@300&display=swap');
 
-$color-primary: #3cd2d2;
-$color-primary-tint: #c4ffff;
+$color-primary: #00dede;
+$color-primary-tint: #d4ffff;
 $color-primary-shade: #164f4f;
 $color-accent: #F3E37C;
 $color-accent-shade: #605b29;
