--- a/src/webpages/DashboardPage/DashboardPage.scss
+++ b/src/webpages/DashboardPage/DashboardPage.scss
@@ -20,23 +20,29 @@
 }
 
 .year-card {
-  height: 400px;
-  width: 300px;
+  height: 360px;
+  width: 280px;
 
-  border: 4px solid black;
-  border-radius: 4px;
+  // border: 3px solid black;
+  border-radius: 10px;
 
   overflow: hidden;
 
   position: relative;
 
+  cursor: pointer;
+
+  box-shadow: 0 0px 6px 0px rgb(68, 68, 68);
+
   background: $color-primary;
 
   img {
     position: absolute;
-
+    top: 0;
+    left: 0;
+    transition: all 0.3s;
     height: 80%;
-    text-align: center;
+
   }
 
   h3 {
@@ -44,7 +50,7 @@
     left: 0;
     bottom: 0;
     width: 100%;
-
+    color: rgba(53, 50, 50, 0.959);
     font-family: Prompt, cursive;
     font-weight: bolder;
     text-transform: uppercase;
@@ -54,6 +60,7 @@
   &:hover {
     img {
       height: 90%;
+      color: unset;
     }
   }
 }
