--- a/src/webpages/DashboardPage/DashboardPage.scss
+++ b/src/webpages/DashboardPage/DashboardPage.scss
@@ -2,12 +2,13 @@
 
 .dashboard-return-wrapper {
   padding: 3vh 2vw;
+  background-image: url("https://www.transparenttextures.com/patterns/cubes.png");
 }
 
 .dashboard-title {
   font-family: Zen Dots, cursive;
   text-align: center;
-  text-decoration: underline;
+  // text-decoration: underline;
 }
 
 .dashboard-subject-cards {
