--- a/src/webpages/DashboardPage/DashboardPage.scss
+++ b/src/webpages/DashboardPage/DashboardPage.scss
@@ -12,16 +12,19 @@
 }
 
 .dashboard-subject-cards {
-  display: grid;
+  // display: grid;
+  display: flex;
+  flex-wrap: wrap;
   justify-content: center;
-  gap: 30px;
-  grid-template-columns: repeat(auto-fit, 300px);
-
+  // gap: 30px;
+  // grid-template-columns: repeat(auto-fit, 300px);
+ 
   padding: 5vh 0;
 }
 
 .year-card {
   display: flex;
+  margin: 10px;
   flex-direction: column;
   align-items: center;
 
@@ -37,12 +40,12 @@
   box-shadow: 0 0px 6px 0px rgb(68, 68, 68);
 
   background: $color-primary;
+  height: fit-content;
 
   img {
-    height: 360px;
+    height: 320px;
     width: 280px;
     transition: all 0.3s;
-    height: 80%;
 
   }
 
@@ -53,12 +56,17 @@
     font-weight: bolder;
     text-transform: uppercase;
     text-align: center;
+  
   }
 
   &:hover {
     img {
-      height: 90%;
+      height: 350px;
       color: unset;
+      transform: scale(1.1);
+    }
+    h6{
+      color: rgb(3, 3, 97);
     }
   }
 }
