--- a/src/index.scss
+++ b/src/index.scss
@@ -2,8 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Zen+Dots&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Prompt:wght@300&display=swap');
 
-$color-primary: #00dede;
-$color-primary-tint: #d4ffff;
+$color-primary: #2ff1f1d5;
+$color-primary-tint: #cae6e617;
 $color-primary-shade: #164f4f;
 $color-accent: #F3E37C;
 $color-accent-shade: #605b29;
