--- a/src/components/NavbarComponent/NavbarComponent.scss
+++ b/src/components/NavbarComponent/NavbarComponent.scss
@@ -9,12 +9,24 @@
   box-shadow: 0 8px 6px -6px #999;
 
   background: $color-primary;
-
+  
+  .brand-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 200px;
+  }
   img {
     height: 50px;
     padding: 4px;
     border-radius: 50%;
     background: $color-primary-shade;
+  }
+
+  .brand{
+    font-family: 'Oswald', cursive;
+    margin: 0;
+    height: fit-content
   }
 }
 
