--- a/src/webpages/DashboardPage/DashboardPage.scss
+++ b/src/webpages/DashboardPage/DashboardPage.scss
@@ -4,10 +4,15 @@
   padding: 3vh 2vw;
   background-image: url("https://www.transparenttextures.com/patterns/cubes.png");
 }
+.files-container {
+  padding: 3vh 2vw;
+  background-image: url("https://www.transparenttextures.com/patterns/cubes.png");
+}
 
 .dashboard-title {
-  font-family: Zen Dots, cursive;
+  font-family: 'Oswald', cursive;
   text-align: center;
+  margin-bottom: 20px;
   // text-decoration: underline;
 }
 
@@ -28,7 +33,6 @@
   flex-direction: column;
   align-items: center;
 
-  // border: 3px solid black;
   border-radius: 10px;
 
   overflow: hidden;
@@ -37,7 +41,7 @@
 
   cursor: pointer;
 
-  box-shadow: 0 0px 6px 0px rgb(68, 68, 68);
+  box-shadow: 0 2px 6px 0px rgba(0, 0, 0, 0.5);
 
   background: $color-primary;
   height: fit-content;
