--- a/src/index.scss
+++ b/src/index.scss
@@ -17,10 +17,19 @@ body {
   background: $color-primary-tint;
 }
 
-@mixin classic-button {
+.sign-button {
   width: 120px;
   height: 40px;
 
   border: 1px solid black;
   border-radius: 4px;
+
+  background: $color-accent;
+
+  transition: .4s;
+
+  &:hover, &:focus {
+    background: $color-accent-shade;
+    color: white;
+  }
 }
