fixed authentication bugs and a little css here and there.

--- a/src/components/NavbarComponent/NavbarComponent.scss
+++ b/src/components/NavbarComponent/NavbarComponent.scss
@@ -16,4 +16,15 @@
     border-radius: 50%;
     background: $color-primary-shade;
   }
+
+  span {
+    font-family: Oswald, cursive;
+    font-size: 25px;
+  }
+}
+
+.brand-container {
+  display: flex;
+  gap: 20px;
+  align-items: center;
 }
