--- a/src/webpages/DashboardPage/DashboardPage.scss
+++ b/src/webpages/DashboardPage/DashboardPage.scss
@@ -13,16 +13,12 @@
   font-family: 'Oswald', cursive;
   text-align: center;
   margin-bottom: 20px;
-  // text-decoration: underline;
 }
 
 .dashboard-subject-cards {
-  // display: grid;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  // gap: 30px;
-  // grid-template-columns: repeat(auto-fit, 300px);
  
   padding: 5vh 0;
 }
@@ -41,7 +37,7 @@
 
   cursor: pointer;
 
-  box-shadow: 0 2px 6px 0px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.5);
 
   background: $color-primary;
   height: fit-content;
