fixed the css a bit more

--- a/src/index.scss
+++ b/src/index.scss
@@ -14,7 +14,7 @@ $color-accent-shade: #605b29;
 }
 
 body {
-  background: $color-primary-tint;
+  background-image: url("https://www.transparenttextures.com/patterns/cubes.png");
 }
 
 .sign-button {
