--- a/src/components/NavbarComponent/NavbarComponent.scss
+++ b/src/components/NavbarComponent/NavbarComponent.scss
@@ -16,4 +16,11 @@
     border-radius: 50%;
     background: $color-primary-shade;
   }
+  h2{
+    margin: 0%;
+    font-family: 'Oswald', cursive;
+    font-weight: bold;
+    letter-spacing: 2px;
+  }
+
 }
