--- a/src/webpages/DashboardPage/DashboardPage.scss
+++ b/src/webpages/DashboardPage/DashboardPage.scss
@@ -2,7 +2,7 @@
 
 .files-container {
   padding: 3vh 2vw;
-  background-image: url("https://www.transparenttextures.com/patterns/cubes.png");
+  background-color: antiquewhite;
 }
 
 .dashboard-title {
@@ -15,6 +15,5 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
- 
   padding: 5vh 0;
 }
