--- a/src/components/File/File.scss
+++ b/src/components/File/File.scss
@@ -4,16 +4,12 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-
+  align-items: center;
   margin: 10px;
-
-  width: 120px;
-  height: 70px;
-
-  background: $color-accent;
-
+  background-color: whitesmoke;
+  width: 150px;
+  overflow: hidden;
   box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.5);
-
   transition: .4s;
 
   svg {
@@ -35,7 +31,7 @@
   &:hover {
     cursor: pointer;
 
-    transform: scale(1.5);
+    transform: scale(1.3);
   }
 }
 
