--- a/src/components/File/File.scss
+++ b/src/components/File/File.scss
@@ -1,47 +1,44 @@
 @import "src/index";
 
 .file-button {
+  height: 300px;
+  width: 200px;
   margin: 10px;
-  background-color: whitesmoke;
-  width: 140px;
-  height: 130px;
-  overflow: hidden;
+  padding: 10px;
+
+  border: 2px solid black;
+  border-radius: 4px;
+
+  background: $color-accent;
   box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.5);
   transition: .4s;
-  padding: 0%;
 
-  a{
-    text-decoration: none;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: flex-start;
-    height: 100%;
-   
-    span {
-      overflow: hidden;
-      white-space: nowrap;
-      text-overflow: ellipsis;
-      color: black;
-      padding: 0 3px;
-    }
-  } 
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 
-  svg {
-    margin: 0 auto;
+  text-decoration: none;
+  color: black;
 
-    path {
-      fill: black;
-    }
+  img {
+    height: 80%;
+
+    border: 2px solid black;
+    border-radius: 4px;
+  }
+
+  span {
+    font-family: Prompt, cursive;
+    font-size: 20px;
+
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
   }
 
   &:hover {
-    cursor: pointer;
-    transform: scale(1.3);
-  }
-}
+    transform: scale(1.1);
 
-.file-thumbnail {
-  width: 100%;
-  overflow: hidden;
+    box-shadow: 0 10px 6px 0 rgba(0, 0, 0, 0.5);
+  }
 }
