--- a/src/components/File/File.scss
+++ b/src/components/File/File.scss
@@ -1,44 +1,51 @@
 @import "src/index";
-
+.modal-file-view{
+  height: 98vh;
+  width: 80vw;
+}
+.modal-content{
+  width: 80vw;
+}
+.modal-dialog{
+  margin: auto;
+  max-width: unset;
+  width: 80vw;
+}
 .file-button {
-  height: 300px;
-  width: 200px;
+  height: 120px;
+  width: 150px;
   margin: 10px;
-  padding: 10px;
-
-  border: 2px solid black;
-  border-radius: 4px;
-
+  padding: 0;
   background: $color-accent;
   box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.5);
-  transition: .4s;
+  transition: .2s;
 
   display: flex;
   flex-direction: column;
-  gap: 10px;
-
+  border-radius: 4px;
   text-decoration: none;
   color: black;
-
+  overflow: hidden;
+  text-overflow: ellipsis;
   img {
-    height: 80%;
-
-    border: 2px solid black;
-    border-radius: 4px;
+    width: 150px;
+    height: 85%;
+   
+    margin: 0;
   }
 
   span {
     font-family: Prompt, cursive;
-    font-size: 20px;
-
-    text-overflow: ellipsis;
+    font-size: 12px;
+    font-weight: bold;
+  
     white-space: nowrap;
-    overflow: hidden;
+  
+    padding: 0 5px;
   }
 
   &:hover {
     transform: scale(1.1);
-
-    box-shadow: 0 10px 6px 0 rgba(0, 0, 0, 0.5);
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.5);
   }
 }
