--- a/src/components/Folder/Folder.scss
+++ b/src/components/Folder/Folder.scss
@@ -55,20 +55,14 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-
-
-
-  width: 100px;
-  height: 60px;
-
+  width: 120px;
+  height: 100px;
   background: $color-primary;
-
   box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.5);
-
   transition: .4s;
-
   svg {
     margin: 0 auto;
+    font-size: 50px;
   }
 
   span {
