--- a/src/components/Folder/Folder.scss
+++ b/src/components/Folder/Folder.scss
@@ -59,12 +59,12 @@
   height: 100px;
   background: $color-primary;
   box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.5);
+  padding: 0 10px;
   transition: .4s;
   svg {
     margin: 0 auto;
     font-size: 50px;
   }
-
   span {
     overflow: hidden;
     white-space: nowrap;
@@ -74,7 +74,7 @@
   &:hover, &:focus {
     cursor: pointer;
 
-    transform: scale(1.2);
+    transform: scale(1.1);
 
     background: $color-primary-shade;
 
