--- a/src/components/NavbarComponent/NavbarComponent.scss
+++ b/src/components/NavbarComponent/NavbarComponent.scss
@@ -11,15 +11,23 @@
   background: $color-primary;
 
   img {
-    height: 50px;
+    height: 40px;
     padding: 4px;
     border-radius: 50%;
     background: $color-primary-shade;
+    margin: 5px;
   }
-
-  span {
+  a {
     font-family: Oswald, cursive;
     font-size: 25px;
+    color: black;
+    text-decoration: none;
+  }
+  span {
+    font-family: Oswald, cursive;
+    font-size: 18px;
+    margin-right: 5px;
+    margin-top: 3px;
   }
 }
 
@@ -28,4 +36,9 @@
   gap: 20px;
   align-items: center;
 
+}
+@media only screen and ( max-width: 460px ){
+   #name{
+     display: none;
+   }
 }
