--- a/src/index.scss
+++ b/src/index.scss
@@ -5,8 +5,8 @@
 $color-primary: #2ff1f1f6;
 $color-primary-tint: #57797918;
 $color-primary-shade: #164f4f;
-$color-accent: #F3E37C;
-$color-accent-shade: #6b651b;
+$color-accent: #d80000;
+$color-accent-shade: #361108;
 
 * {
   box-sizing: border-box;
@@ -15,33 +15,28 @@ $color-accent-shade: #6b651b;
 body {
   background-image:  url("./assets/cubes.png");
   // removed them because they were not working in firefox
-  background-color: rgba(245, 245, 245, 0.445);
+  background-color: rgba(245, 245, 245, 0.733);
   background-blend-mode: saturation;
 }
 
 .sign-button {
-  width: 120px;
-  height: 40px;
-
+  width: 80px;
+  height: 35px;
+  font-size: 15px;
   border: none;
   border-radius: 4px;
   outline: none;
-
   text-decoration: none;
-  color: black;
-
+  color: white;
   background: $color-accent;
 
   transition: .4s;
+  box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.5);
 
   &:hover, &:focus {
     background: $color-accent-shade;
-    border: none;
-
-    transform: translate(-2px, -2px);
-    box-shadow: 4px 4px 3px rgba(0, 0, 0, 0.5);
-
-    color: white;
+    transform: translate(-1px, -1px);
+    
   }
 }
 
@@ -60,4 +55,7 @@ body {
     text-decoration: underline;
     transform: skew(-20deg);
   }
+}
+a{
+  color: rgb(0, 0, 211);
 }
