--- a/src/components/NavbarComponent/NavbarComponent.scss
+++ b/src/components/NavbarComponent/NavbarComponent.scss
@@ -18,15 +18,16 @@
   }
   #logo{
     height: 60px;
+    border-radius: 0;
   }
   a {
-    font-family: Oswald, cursive;
+    font-family: 'Comic Neue', cursive;
     font-size: 25px;
     color: black;
     text-decoration: none;
   }
   span {
-    font-family: Oswald, cursive;
+    font-family: 'Comic Neue', cursive;
     font-size: 18px;
     margin-right: 5px;
     margin-top: 3px;
@@ -39,7 +40,7 @@
   align-items: center;
 
 }
-@media only screen and ( max-width: 460px ){
+@media only screen and ( max-width: 572px ){
    #name{
      display: none;
    }
