--- a/src/webpages/LandingPage/LandingPage.scss
+++ b/src/webpages/LandingPage/LandingPage.scss
@@ -23,13 +23,13 @@
   width: 50%;
 
   h1 {
-    font-family: 'Oswald', cursive;
+    font-family: 'Comic neue' , cursive;
     font-size: 3rem;
     color: $color-accent-shade;
   }
 
   p {
-    font-family: 'Prompt', cursive;
+    font-family: 'Comic neue' , cursive;
     font-size: 1.2rem;
   }
 }
