--- a/src/components/File/File.scss
+++ b/src/components/File/File.scss
@@ -2,13 +2,13 @@
 
 .file-button {
   height: 120px;
-  width: 150px;
+  width: 140px;
   margin: 10px;
   padding: 0;
-  background: $color-accent;
+  // background: $color-primary-shade;
   box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.5);
   transition: .2s;
-
+  border: 0;
   display: flex;
   flex-direction: column;
   border-radius: 4px;
@@ -27,7 +27,6 @@
   span {
     font-family: Prompt, cursive;
     font-size: 12px;
-    font-weight: bold;
 
     white-space: nowrap;
 
