--- a/src/components/NavbarComponent/NavbarComponent.scss
+++ b/src/components/NavbarComponent/NavbarComponent.scss
@@ -8,7 +8,8 @@
   padding: 5px 2vw;
   box-shadow: 0 8px 6px -6px #999;
 
-  background: $color-primary;
+  background: rgb(60,255,255);
+  
 
   img {
     height: 40px;
@@ -25,12 +26,14 @@
     font-size: 25px;
     color: black;
     text-decoration: none;
+    font-weight: bold;
   }
   span {
     font-family: 'Comic Neue', cursive;
     font-size: 18px;
     margin-right: 5px;
     margin-top: 3px;
+    font-weight: 800;
   }
 }
 
@@ -38,7 +41,6 @@
   display: flex;
   gap: 20px;
   align-items: center;
-
 }
 @media only screen and ( max-width: 572px ){
    #name{
