--- a/src/webpages/LandingPage/LandingPage.scss
+++ b/src/webpages/LandingPage/LandingPage.scss
@@ -12,8 +12,9 @@
 
   padding: 2vh 2vw;
   border-radius: 10px;
-  background: $color-primary;
-  box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.5);
+  background: rgb(60,255,255);
+  background: linear-gradient(0deg, rgba(60,255,255,1) 27%, rgba(22,208,216,1) 100%);
+  box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.336);
 }
 
 .landing-page-hero-left {
