finalized the file design

--- a/src/components/File/File.scss
+++ b/src/components/File/File.scss
@@ -1,59 +1,5 @@
 @import "src/index";
 
-//.file-button {
-//  height: 120px;
-//  width: 140px;
-//  margin: 10px;
-//  padding: 0;
-//  // background: $color-primary-shade;
-//  box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.5);
-//  transition: .2s;
-//  border: 0;
-//  display: flex;
-//  flex-direction: column;
-//  border-radius: 4px;
-//  text-decoration: none;
-//  color: black;
-//  overflow: hidden;
-//  text-overflow: ellipsis;
-//
-//  img {
-//    width: 150px;
-//    height: 85%;
-//
-//    margin: 0;
-//  }
-//
-//  span {
-//    font-family: Prompt, cursive;
-//    font-size: 12px;
-//
-//    white-space: nowrap;
-//
-//    padding: 0 5px;
-//  }
-//
-//  &:hover {
-//    transform: scale(1.1);
-//    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.5);
-//  }
-//}
-//
-//.modal-body {
-//  position: relative;
-//
-//  embed {
-//    width: 80vw;
-//
-//    position: absolute;
-//    top: 0;
-//    left: 50%;
-//    margin-left: -40vw;
-//  }
-//}
-
-@import "src/index";
-
 .file-wrapper {
   display: flex;
   flex-direction: column;
@@ -67,26 +13,23 @@
 }
 
 .preview-file-button {
-  background: $color-primary;
   border-radius: 4px 4px 0 0;
   box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.5);
 
   text-decoration: none;
 
   height: 130px;
-  padding: 15px;
+  padding: 2px;
 
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 5px;
 
   transition: .4s;
 
   img {
     display: block;
     height: 80%;
-
-    border: 2px solid black;
   }
 
   span {
@@ -94,6 +37,8 @@
     overflow: hidden;
     text-overflow: ellipsis;
 
+    font-family: Prompt, cursive;
+    font-size: 15px;
     text-align: center;
     color: black;
   }
