--- a/src/components/Folder/Folder.scss
+++ b/src/components/Folder/Folder.scss
@@ -9,13 +9,13 @@
   border-radius: 10px;
 
   overflow: hidden;
- 
+
   cursor: pointer;
 
   box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.5);
 
-  background: rgb(60,255,255);
-  background: linear-gradient(0deg, rgba(60,255,255,1) 27%, rgba(22,208,216,1) 100%);
+  background: rgb(60, 255, 255);
+  background: linear-gradient(0deg, rgba(60, 255, 255, 1) 27%, rgba(22, 208, 216, 1) 100%);
   height: fit-content;
 
   img {
@@ -67,7 +67,7 @@
   text-decoration: none;
 
   height: 90px;
-  margin:  0px;
+  margin: 0;
 
   display: flex;
   flex-direction: column;
@@ -133,7 +133,7 @@
   }
 }
 
-#options-buttons-wrapper{
+.folder-options-buttons-wrapper {
   display: flex;
   justify-content: space-around;
 
