--- a/src/components/File/File.scss
+++ b/src/components/File/File.scss
@@ -18,16 +18,17 @@
 
   text-decoration: none;
 
-  height: 130px;
+  height: 120px;
   padding: 2px;
 
   display: flex;
   flex-direction: column;
   gap: 5px;
-
+  background: transparent;
   transition: .4s;
 
   img {
+    width: 100%;
     display: block;
     height: 80%;
   }
@@ -36,26 +37,18 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-
-    font-family: Prompt, cursive;
-    font-size: 15px;
+    font-size: 13px;
+    font-weight: 600;
     text-align: center;
     color: black;
   }
 
   &:hover {
-    transform: scaleX(1.07);
-    background: $color-primary-shade;
+    transform: scale(1.07);
     box-shadow: 0 6px 6px 0 rgba(0, 0, 0, 0.5);
-
-    color: white;
 
     svg path {
       fill: white;
-    }
-
-    span {
-      color: white;
     }
   }
 }
