--- a/src/components/File/File.scss
+++ b/src/components/File/File.scss
@@ -32,6 +32,13 @@
     height: 80%;
   }
 
+  svg {
+    margin: auto;
+    path {
+      fill: black;
+    }
+  }
+
   span {
     white-space: nowrap;
     overflow: hidden;
