--- a/src/components/File/File.scss
+++ b/src/components/File/File.scss
@@ -17,13 +17,11 @@
   box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.5);
 
   text-decoration: none;
-
+  border: none;
   height: 120px;
-  padding: 2px;
 
   display: flex;
   flex-direction: column;
-  gap: 5px;
   background: transparent;
   transition: .4s;
 
@@ -34,6 +32,7 @@
   }
 
   span {
+    width: 100%;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
