--- a/src/components/NavbarComponent/NavbarComponent.scss
+++ b/src/components/NavbarComponent/NavbarComponent.scss
@@ -53,7 +53,37 @@
 }
 
 @media only screen and (max-width: 572px) {
+  
   #name {
     display: none;
+  }
+  .sign-button{
+    font-size: 10px;
+    width: 50px;
+    height: 30px;
+  }
+  .search-btn{
+    width: 35px;
+    height: 32px;
+    padding: 0;
+  }
+  .nav-return-wrapper{
+    padding: 2px 2vw;
+    img{
+      height: 35px;
+    }
+    #logo{
+      height: 40px;
+    }
+    a {
+      font-family: 'Comic Neue', cursive;
+      font-size: 25px;
+      color: black;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    .brand-container{
+      gap: 10px;
+    }
   }
 }
