--- a/src/components/NavbarComponent/NavbarComponent.scss
+++ b/src/components/NavbarComponent/NavbarComponent.scss
@@ -34,9 +34,12 @@
   span {
     font-family: 'Comic Neue', cursive;
     font-size: 18px;
-    margin-right: 5px;
+    margin-right: 3px;
     margin-top: 3px;
     font-weight: bolder;
+  }
+  .sign-button{
+    font-family: 'Comic Neue', cursive;
   }
 }
 
@@ -48,7 +51,7 @@
 
 .nav-right-wrapper {
   display: flex;
-  gap: 1vw;
+  gap: 0.5vw;
   align-items: center;
 }
 
@@ -68,12 +71,12 @@
     padding: 0;
   }
   .nav-return-wrapper{
-    padding: 2px 2vw;
+    padding: 4px 2vw;
     img{
       height: 35px;
     }
     #logo{
-      height: 40px;
+      height: 45px;
     }
     a {
       font-family: 'Comic Neue', cursive;
