--- a/src/components/NavbarComponent/NavbarComponent.scss
+++ b/src/components/NavbarComponent/NavbarComponent.scss
@@ -50,10 +50,28 @@
   display: flex;
   gap: 1vw;
   align-items: center;
+
+  button {
+    width: 100px;
+    height: 35px;
+
+    font-family: 'Oswald', cursive;
+    font-size: 18px;
+    letter-spacing: 1px;
+
+    border-color: black;
+    border-width: 2px 4px 4px 2px;
+    background: $color-accent;
+
+    &:hover{
+      transform: translate(-2px, -2px);
+      box-shadow: 4px 4px 5px;
+    }
+  }
 }
 
 @media only screen and (max-width: 572px) {
-  
+
   #name {
     display: none;
   }
