--- a/src/index.scss
+++ b/src/index.scss
@@ -3,10 +3,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Prompt:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Comic+Neue:wght@400;700&display=swap');
 
-$color-primary: #1fe7e7;
-$color-primary-tint: #c5ffff;
+$color-primary: #0eeeee;
+$color-primary-tint: hsl(0, 0%, 100%);
 $color-primary-shade: #164f4f;
-$color-accent: #ffff5a;
+$color-accent: #086317;
 $color-accent-shade: #361108;
 
 * {
