--- a/src/components/NavbarComponent/NavbarComponent.scss
+++ b/src/components/NavbarComponent/NavbarComponent.scss
@@ -59,21 +59,13 @@
   align-items: center;
 
   button {
-    width: 100px;
+    width: 35px;
     height: 35px;
-
+    border-width: 2px;
+    border-radius: 35px;
     font-family: 'Oswald', cursive;
-    font-size: 18px;
-    letter-spacing: 1px;
-
-    border-color: black;
-    border-width: 2px 4px 4px 2px;
-    background: $color-accent;
-
-    &:hover{
-      transform: translate(-2px, -2px);
-      box-shadow: 4px 4px 5px;
-    }
+    text-align: center;
+    padding: 0;
   }
 }
 
