--- a/src/webpages/LandingPage/LandingPage.scss
+++ b/src/webpages/LandingPage/LandingPage.scss
@@ -12,9 +12,9 @@
 
   padding: 2vh 2vw;
   border-radius: 10px;
-  background: rgb(60,255,255);
-  background: linear-gradient(0deg, rgba(60,255,255,1) 27%, rgba(22,208,216,1) 100%);
-  box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.336);
+  // background: rgb(60, 255, 255);
+  // background: linear-gradient(0deg, rgba(60, 255, 255, 1) 27%, rgba(22, 208, 216, 1) 100%);
+  // box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.336);
 }
 
 .landing-page-hero-left {
