--- a/src/index.scss
+++ b/src/index.scss
@@ -3,9 +3,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Prompt:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Comic+Neue:wght@400;700&display=swap');
 
-$color-primary: #0eeeee;
+$color-primary: #00a1f1;
 $color-primary-tint: hsl(0, 0%, 100%);
-$color-primary-shade: #164f4f;
+$color-primary-shade: #5f6368;
 $color-accent: #086317;
 $color-accent-shade: #361108;
 
