--- a/src/components/File/File.scss
+++ b/src/components/File/File.scss
@@ -6,15 +6,18 @@
 
   position: relative;
 
-  width: 145px;
-
+  width: 200px;
+  padding: 2px;
   margin: 10px;
   border-radius: 4px;
+  border: 1px solid $color-primary-shade;
+   &:hover{
+    border:1px solid black;
+  }
 }
 
 .preview-file-button {
   border-radius: 4px 4px 0 0;
-  box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.5);
 
   text-decoration: none;
   border: none;
@@ -24,7 +27,7 @@
   flex-direction: column;
   background: transparent;
   transition: .4s;
-
+ 
   img {
     width: 100%;
     display: block;
@@ -47,12 +50,6 @@
     font-weight: 600;
     text-align: center;
     color: black;
-  }
-
-  &:hover {
-    transform: scale(1.06);
-    box-shadow: 0 6px 6px 0 rgba(0, 0, 0, 0.5);
-
   }
 }
 
