--- a/src/index.scss
+++ b/src/index.scss
@@ -4,8 +4,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Comic+Neue:wght@400;700&display=swap');
 
 $color-primary: #00a1f1;
-$color-primary-tint: hsl(0, 0%, 100%);
-$color-primary-shade: #5f6368;
+$color-primary-tint: #ecf4ff;
+$color-primary-shade: #4a4e53;
 $color-accent: #086317;
 $color-accent-shade: #361108;
 
