--- a/src/components/File/File.scss
+++ b/src/components/File/File.scss
@@ -8,9 +8,9 @@
 
   width: 200px;
   padding: 2px;
-  margin: 10px;
+  margin: 12px;
   border-radius: 4px;
-  border: 1px solid $color-primary-shade;
+  border: 1px solid grey;
    &:hover{
     border:1px solid black;
   }
@@ -56,7 +56,6 @@
 .file-options {
   background: $color-primary-shade;
   border-radius: 4px;
-  box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.5);
 
   padding: 0;
 
@@ -93,5 +92,10 @@
     margin-left: -35vw;
     margin-top: -20px;
     left: 50%;
+  }
+}
+@media (max-width: 600px) {
+  .file-wrapper{
+    width: 143px;
   }
 }
