--- a/src/index.scss
+++ b/src/index.scss
@@ -3,8 +3,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Prompt:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Comic+Neue:wght@400;700&display=swap');
 
-$color-primary: #00a1f1;
-$color-primary-tint: #ecf4ff;
+$color-primary: #0F9D58;;
+$color-primary-tint: #ffffff;
 $color-primary-shade: #4a4e53;
 $color-accent: #086317;
 $color-accent-shade: #361108;
