--- a/src/components/NavbarComponent/NavbarComponent.scss
+++ b/src/components/NavbarComponent/NavbarComponent.scss
@@ -6,7 +6,7 @@
   align-items: center;
   z-index: 5;
   background-color: #fff;
-  padding: 5px  2vw;
+  padding: 5px  2vw 0 2vw;
   margin: 0;
 
   img {
