--- a/src/components/File/File.scss
+++ b/src/components/File/File.scss
@@ -10,7 +10,7 @@
   padding: 2px;
   margin: 12px;
   border-radius: 4px;
-  border: 1px solid grey;
+  border: 1px solid #d0d0d3;
    &:hover{
     border:1px solid black;
   }
