--- a/src/components/Folder/Folder.scss
+++ b/src/components/Folder/Folder.scss
@@ -11,7 +11,7 @@
   overflow: hidden;
 
   cursor: pointer;
-  border: 1px solid grey;
+  border: 1px solid #d0d0d3;
   height: fit-content;
 
   img {
@@ -50,7 +50,7 @@
   position: relative;
 
   width: 145px;
-  border: 1px solid grey;
+  border: 1px solid #d0d0d3;
   margin: 10px;
   border-radius: 4px;
   &:hover{
