--- a/src/webpages/DashboardPage/DashboardPage.scss
+++ b/src/webpages/DashboardPage/DashboardPage.scss
@@ -39,7 +39,7 @@
   top: 0px;
   background-color: #fff;
   z-index: 5;
-  border-bottom: 1px solid grey;
+  border-bottom: 1px solid #d0d0d3;
   padding-top: 10px;
  
 }
